--- a/static/html/index.html
+++ b/static/html/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <h1 id="e">Is your face Tramp's? </h1>
-    <h3> calculation by Deep Leaning how your uploded photo is similar to Tramp's face.</h3>
+    <h3> calculation by Deep Leaning how faces in your uploded photo are similar to Tramp's face.</h3>
 
     <div id="app"></div>
     <div id="upload"></div>
